--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "scikit_build_core.build"
 [project]
 name = "pyimagecuda"
 version = "0.0.1"
-description = "Minimal CUDA Build Test"
+description = "GPU-accelerated image processing library for Python"
 readme = "README.md"
 requires-python = ">=3.10"
 authors = [{ name = "Beltrán Offerrall"}]
