--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,13 +1,10 @@
 name: Build Wheels
 
 on:
-
   push:
     branches: [main]
-
   release:
     types: [published]
-
   workflow_dispatch:
 
 jobs:
@@ -16,12 +13,13 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [windows-2022]
+        os: [windows-2022, ubuntu-latest]
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install CUDA Toolkit
+      - name: Install CUDA Toolkit (Windows)
+        if: runner.os == 'Windows'
         uses: Jimver/cuda-toolkit@v0.2.21
         with:
           cuda: '12.5.1'
@@ -32,12 +30,23 @@ jobs:
         uses: pypa/cibuildwheel@v2.21.3
         env:
           CIBW_ARCHS_WINDOWS: "AMD64"
-          CIBW_SKIP: "cp36-* cp37-* cp38-* cp39-* pp*"
+
+          CIBW_ARCHS_LINUX: "x86_64"
+
+          CIBW_SKIP: "cp36-* cp37-* cp38-* cp39-* pp* *-musllinux_*"
           CIBW_BUILD_VERBOSITY: 1
+
+          CIBW_BEFORE_ALL_LINUX: >
+            yum-config-manager --add-repo https://developer.download.nvidia.com/compute/cuda/repos/rhel8/x86_64/cuda-rhel8.repo &&
+            yum install -y cuda-nvcc-12-5 cuda-cudart-devel-12-5 cuda-cudart-static-12-5
+
+          CIBW_ENVIRONMENT_LINUX: >
+            PATH=/usr/local/cuda-12.5/bin:$PATH 
+            LD_LIBRARY_PATH=/usr/local/cuda-12.5/lib64:$LD_LIBRARY_PATH
 
       - uses: actions/upload-artifact@v4
         with:
-          name: wheels
+          name: wheels-${{ matrix.os }}
           path: ./wheelhouse/*.whl
 
   publish_to_pypi:
@@ -52,8 +61,9 @@ jobs:
     steps:
       - uses: actions/download-artifact@v4
         with:
-          name: wheels
+          pattern: wheels-*
           path: dist
+          merge-multiple: true
 
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
