--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.18)
 
 set(CMAKE_CUDA_RUNTIME_LIBRARY Static)
 
+set(CMAKE_POSITION_INDEPENDENT_CODE ON) 
+
 project(pyimagecuda_internal LANGUAGES CXX CUDA)
 
 set(CMAKE_CXX_STANDARD 14)
