--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,17 +30,14 @@ jobs:
         uses: pypa/cibuildwheel@v2.21.3
         env:
           CIBW_ARCHS_WINDOWS: "AMD64"
-
           CIBW_ARCHS_LINUX: "x86_64"
-
+          CIBW_MANYLINUX_X86_64_IMAGE: manylinux_2_28
           CIBW_SKIP: "cp36-* cp37-* cp38-* cp39-* pp* *-musllinux_*"
           CIBW_BUILD_VERBOSITY: 1
-
           CIBW_BEFORE_ALL_LINUX: >
             yum install -y yum-utils &&
             yum-config-manager --add-repo https://developer.download.nvidia.com/compute/cuda/repos/rhel8/x86_64/cuda-rhel8.repo &&
             yum install -y cuda-nvcc-12-5 cuda-cudart-devel-12-5 cuda-cudart-static-12-5
-
           CIBW_ENVIRONMENT_LINUX: >
             PATH=/usr/local/cuda-12.5/bin:$PATH 
             LD_LIBRARY_PATH=/usr/local/cuda-12.5/lib64:$LD_LIBRARY_PATH
