test build linux 4

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
           CIBW_BEFORE_ALL_LINUX: >
             yum install -y yum-utils &&
             yum-config-manager --add-repo https://developer.download.nvidia.com/compute/cuda/repos/rhel8/x86_64/cuda-rhel8.repo &&
-            yum install -y cuda-nvcc-12-5 cuda-cudart-devel-12-5 cuda-cudart-static-12-5
+            yum install -y cuda-nvcc-12-5 cuda-cudart-devel-12-5
           CIBW_ENVIRONMENT_LINUX: >
             PATH=/usr/local/cuda-12.5/bin:$PATH 
             LD_LIBRARY_PATH=/usr/local/cuda-12.5/lib64:$LD_LIBRARY_PATH
