--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,6 @@
 cmake_minimum_required(VERSION 3.18)
 
 set(CMAKE_CUDA_RUNTIME_LIBRARY Static)
-
 set(CMAKE_POSITION_INDEPENDENT_CODE ON) 
 
 project(pyimagecuda_internal LANGUAGES CXX CUDA)
@@ -15,6 +14,7 @@ endif()
 
 find_package(Python COMPONENTS Interpreter Development.Module REQUIRED)
 find_package(CUDAToolkit REQUIRED)
+find_package(OpenGL REQUIRED)
 
 file(GLOB_RECURSE SOURCES "src/*.cu" "src/*.cpp")
 
@@ -22,7 +22,11 @@ python_add_library(pyimagecuda_internal MODULE ${SOURCES} WITH_SOABI)
 
 target_include_directories(pyimagecuda_internal PRIVATE src)
 
-target_link_libraries(pyimagecuda_internal PRIVATE CUDA::cudart_static Python::Module)
+target_link_libraries(pyimagecuda_internal PRIVATE 
+    CUDA::cudart_static 
+    Python::Module
+    OpenGL::GL
+)
 
 install(TARGETS pyimagecuda_internal DESTINATION pyimagecuda)
 install(DIRECTORY pyimagecuda DESTINATION .)
