--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,7 @@ jobs:
           CIBW_SKIP: "cp36-* cp37-* cp38-* cp39-* pp* *-musllinux_*"
           CIBW_BUILD_VERBOSITY: 1
           CIBW_BEFORE_ALL_LINUX: >
-            yum install -y yum-utils &&
+            yum install -y yum-utils mesa-libGL-devel &&
             yum-config-manager --add-repo https://developer.download.nvidia.com/compute/cuda/repos/rhel8/x86_64/cuda-rhel8.repo &&
             yum install -y cuda-nvcc-12-5 cuda-cudart-devel-12-5
           CIBW_ENVIRONMENT_LINUX: >
